[package]
name = "e-write-buffer"
version = "0.3.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
license = "MIT"
description = "A no_std const-generic `Write`able buffer"
repository = "https://github.com/RCasatta/e-write-buffer"
documentation = "https://docs.rs/e-write-buffer"
keywords = ["write", "buffer", "embedded", "no_std", "const-generics"]
categories = [
    "embedded",
    "no-std",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
